scripts/nullness/nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8.txt
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: NotificationEmprunts
    public Enseignant(int i, String n, String p, String t, int nbEM) {
           ^
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:15: error: [override.param] Incompatible parameter type for media.
    protected int eligibilite(Media media) {
                                    ^
  found   : @Initialized @NonNull Media
  required: @Initialized @Nullable Media
  Consequence: method in @Initialized @NonNull Enseignant
    @Initialized @NonNull int eligibilite(@Initialized @NonNull Enseignant this, @Initialized @NonNull Media p0)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int eligibilite(@Initialized @NonNull Utilisateur this, @Initialized @Nullable Media p0)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:26: error: [override.param] Incompatible parameter type for idEmprunt.
    public int commenter(int idEmprunt, int n, String com) {
                             ^
  found   : @Initialized @NonNull int
  required: @Initialized @Nullable int
  Consequence: method in @Initialized @NonNull Enseignant
    @Initialized @NonNull int commenter(@Initialized @NonNull Enseignant this, @Initialized @NonNull int p0, @Initialized @NonNull int p1, @Initialized @NonNull String p2)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int commenter(@Initialized @NonNull Utilisateur this, @Initialized @Nullable int p0, @Initialized @Nullable int p1, @Initialized @Nullable String p2)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:26: error: [override.param] Incompatible parameter type for n.
    public int commenter(int idEmprunt, int n, String com) {
                                            ^
  found   : @Initialized @NonNull int
  required: @Initialized @Nullable int
  Consequence: method in @Initialized @NonNull Enseignant
    @Initialized @NonNull int commenter(@Initialized @NonNull Enseignant this, @Initialized @NonNull int p0, @Initialized @NonNull int p1, @Initialized @NonNull String p2)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int commenter(@Initialized @NonNull Utilisateur this, @Initialized @Nullable int p0, @Initialized @Nullable int p1, @Initialized @Nullable String p2)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Enseignant.java:26: error: [override.param] Incompatible parameter type for com.
    public int commenter(int idEmprunt, int n, String com) {
                                                      ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull Enseignant
    @Initialized @NonNull int commenter(@Initialized @NonNull Enseignant this, @Initialized @NonNull int p0, @Initialized @NonNull int p1, @Initialized @NonNull String p2)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int commenter(@Initialized @NonNull Utilisateur this, @Initialized @Nullable int p0, @Initialized @Nullable int p1, @Initialized @Nullable String p2)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Utilisateur.java:180: error: [return] incompatible types in return.
        return resultat;
               ^
  type of expression: @Initialized @Nullable Emprunt
  method return type: @Initialized @NonNull Emprunt
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/emprunt/Emprunt.java:27: error: [assignment] incompatible types in assignment.
        commentaire = null;
                      ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/scolarite/Projet.java:24: error: [initialization.fields.uninitialized] the constructor does not initialize fields: stage
    public Projet(Cours c, ArrayList<utilisateurs.Etudiant> e, int i, String n, String d, Date dd, Date df) {
           ^
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:12: error: [override.param] Incompatible parameter type for media.
    protected int eligibilite(Media media) {
                                    ^
  found   : @Initialized @NonNull Media
  required: @Initialized @Nullable Media
  Consequence: method in @Initialized @NonNull Etudiant
    @Initialized @NonNull int eligibilite(@Initialized @NonNull Etudiant this, @Initialized @NonNull Media p0)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int eligibilite(@Initialized @NonNull Utilisateur this, @Initialized @Nullable Media p0)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:27: error: [override.param] Incompatible parameter type for idEmprunt.
    public int commenter(int idEmprunt, int n, String com) {
                             ^
  found   : @Initialized @NonNull int
  required: @Initialized @Nullable int
  Consequence: method in @Initialized @NonNull Etudiant
    @Initialized @NonNull int commenter(@Initialized @NonNull Etudiant this, @Initialized @NonNull int p0, @Initialized @NonNull int p1, @Initialized @NonNull String p2)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int commenter(@Initialized @NonNull Utilisateur this, @Initialized @Nullable int p0, @Initialized @Nullable int p1, @Initialized @Nullable String p2)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:27: error: [override.param] Incompatible parameter type for n.
    public int commenter(int idEmprunt, int n, String com) {
                                            ^
  found   : @Initialized @NonNull int
  required: @Initialized @Nullable int
  Consequence: method in @Initialized @NonNull Etudiant
    @Initialized @NonNull int commenter(@Initialized @NonNull Etudiant this, @Initialized @NonNull int p0, @Initialized @NonNull int p1, @Initialized @NonNull String p2)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int commenter(@Initialized @NonNull Utilisateur this, @Initialized @Nullable int p0, @Initialized @Nullable int p1, @Initialized @Nullable String p2)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/utilisateurs/Etudiant.java:27: error: [override.param] Incompatible parameter type for com.
    public int commenter(int idEmprunt, int n, String com) {
                                                      ^
  found   : @Initialized @NonNull String
  required: @Initialized @Nullable String
  Consequence: method in @Initialized @NonNull Etudiant
    @Initialized @NonNull int commenter(@Initialized @NonNull Etudiant this, @Initialized @NonNull int p0, @Initialized @NonNull int p1, @Initialized @NonNull String p2)
  cannot override method in @Initialized @NonNull Utilisateur
    @Initialized @NonNull int commenter(@Initialized @NonNull Utilisateur this, @Initialized @Nullable int p0, @Initialized @Nullable int p1, @Initialized @Nullable String p2)
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:87: error: [argument] incompatible argument for parameter prof of Cours.setProf.
        cours.setProf(null);
                      ^
  found   : null (NullType)
  required: @Initialized @NonNull Enseignant
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurUser.java:151: error: [return] incompatible types in return.
                return null;
                       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Utilisateur
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/controleurs/ControleurProjet.java:34: error: [argument] incompatible argument for parameter e of Projet constructor.
        Projet projet = new Projet(cours, null, idProjet, n, d, dd, df);
                                          ^
  found   : null (NullType)
  required: @Initialized @NonNull ArrayList<@Initialized @NonNull Etudiant>
../nullgtn/url0bbb975254_maxime_collin_mediatheque_tgz-pJ8-test_MainJ8/src/test/Main.java:6: error: [argument] incompatible argument for parameter args of Bdd.main.
        Bdd.main(null);
                 ^
  found   : null (NullType)
  required: @Initialized @NonNull String @Initialized @NonNull []
16 errors
